--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>One Piece</title>
     <link rel="icon" href="./assets/img/gomu_no-removebg-preview.ico">
     <link rel="stylesheet" href="./assets/scss/styles.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -29,7 +29,7 @@
             <i class='bx bx-x'></i>
           </div>
         </div>
-        <!--TOGGLE-->
+        <!--TOGLE-->
         <div class="nav__toggle" id="nav-toggle">
             <i class='bx bx-grid-alt'></i>
 
@@ -38,7 +38,7 @@
     </header>
     <!--MAIN-->
     <main class="main">
-        <!--HOME-->
+        <!--HMOE-->
         <section class="home">
             <div class="home__container container">
                 <div class="home__data">
@@ -60,7 +60,7 @@
                 </div>
 
             </div>
-            <!--FOOTER-->
+            <!--FOTER-->
             <footer class="home__footer">
                 <span>Luffy Page</span>
                 <span>|</span>
