--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#" class="nav__link">Home</a>
+              <div><a href="#">{ódigo/C13}</a></div>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Acerca de</a>
+              <div><a href="#">Puescódigo</a></div>
             </li>
             <li class="nav__item">
-                <a href="#" class="nav__link">Contacto</a>
+                <a href="" class="nav__link">Contacto
+                  <div>
+                    <a href="https://github.com/roberthcm"><i class='bx bxl-github' ></i></a>
+                    <a href="https://wa.link/ikriuz"><i class='bx bxl-whatsapp'  ></i></a>
+                    <a href="https://www.instagram.com/roberth_cm08/"><i class='bx bxl-instagram' ></i></a>
+                  </div>
+                </a>
               </li>
           </ul>
           <div class="nav__close" id="nav-close">
@@ -32,7 +40,6 @@
         <!--TOGLE-->
         <div class="nav__toggle" id="nav-toggle">
             <i class='bx bx-grid-alt'></i>
-
         </div>
       </nav>
     </header>
@@ -45,7 +52,7 @@
                     <span class="home__subtitle">Monkey D. Luffy</span>
                     <h1 class="home__title">A donde fue ZORO?</h1>
                     <p class="home__description">
-                        Sanji tengo gambre <br> alimentame... SANJI
+                        Sanji tengo hambre <br> alimentame... SANJI
 
                     </p>
                     <a href="#" class="home__button">
