--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">Home</a>
-              <div><a href="#">{ódigo/C13}</a></div>
+              <a href="#" class="nav__link">Lugar de aprendizaje</a>
+              <div><a href="https://www.codigoc13.com/">{ódigo/C13}</a></div>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Acerca de</a>
@@ -62,7 +62,7 @@
 
                 </div>
                 <div class="home__img">
-                  <img src="./assets/img/luffy-gear-5-png.png">
+                  <a href="https://www.crunchyroll.com/es/series/GRMG8ZQZR/one-piece"><img src="./assets/img/luffy-gear-5-png.png"></a>
 
                 </div>
 
