subiendo mi nuevo Portafolio

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One Piece</title>
-    <link rel="icon" href="./assets/img/gomu_no-removebg-preview.ico">
+    <title>Portafolio</title>
     <link rel="stylesheet" href="./assets/scss/styles.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
@@ -12,26 +11,23 @@
     <!--HEADER-->
     <header class="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo"> LUFFY </a>
+        <a href="#" class="nav__logo"> Roberth </a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#" class="nav__link">Lugar de aprendizaje</a>
-              <div><a href="https://www.codigoc13.com/">{ódigo/C13}</a></div>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Acerca de</a>
-              <div><a href="#">Puescódigo</a></div>
+              <div><a href="https://www.codigoc13.com/">CódigoC13</a></div>
             </li>
             <li class="nav__item">
                 <a href="" class="nav__link">Contacto
                   <div>
                     <a href="https://github.com/roberthcm"><i class='bx bxl-github' ></i></a>
-                    <a href="https://wa.link/ikriuz"><i class='bx bxl-whatsapp'  ></i></a>
-                    <a href="https://www.instagram.com/roberth_cm08/"><i class='bx bxl-instagram' ></i></a>
+                    <a href="https://wa.link/2f12ss"><i class='bx bxl-whatsapp'  ></i></a>
+                    <a href="https://www.linkedin.com/in/roberth-castillo-83b7a62a3/"><i class='bx bxl-linkedin-square'></i></a>
                   </div>
                 </a>
               </li>
+              <a onclick="toggleMode()"><i class='bx bx-color-fill' id="themeIcon"></i></a>
           </ul>
           <div class="nav__close" id="nav-close">
             <i class='bx bx-x'></i>
@@ -49,27 +45,27 @@
         <section class="home">
             <div class="home__container container">
                 <div class="home__data">
-                    <span class="home__subtitle">Monkey D. Luffy</span>
-                    <h1 class="home__title">A donde fue ZORO?</h1>
+                    <span class="home__subtitle">Roberth Castillo</span>
+                    <h1 class="home__title">Bienvenido a mi pagina</h1>
                     <p class="home__description">
-                        Sanji tengo hambre <br> alimentame... SANJI
+                        Este es mi portafolio, soy programador web  y actualmente estoy cursando el ciclo, quieres saber...
 
                     </p>
                     <a href="#" class="home__button">
-                        Comer!!
+                        Más sobre mi 
 
                     </a>
 
                 </div>
                 <div class="home__img">
-                  <a href="https://www.crunchyroll.com/es/series/GRMG8ZQZR/one-piece"><img src="./assets/img/luffy-gear-5-png.png"></a>
+                  <img src="./assets/img/Cm8.png"></a>
 
                 </div>
 
             </div>
             <!--FOTER-->
             <footer class="home__footer">
-                <span>Luffy Page</span>
+                <span>Roberth Page</span>
                 <span>|</span>
                 <span>company</span>
 
@@ -80,5 +76,6 @@
     </main>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="./assets/js/main.js"></script>
+    
   </body>
 </html>
